# con

./: .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  Cargo.toml  DESIGN.md  HACKING.md  LICENSE  README.md  install.sh  justfile  mise.toml
.cargo/: config.toml
.github/workflows/: ci-portable.yml  docs-website-rebuild.yml  e2e.yml  release-finalize.yml  release-linux.yml  release-macos.yml  release-windows.yml
appcast/: beta-linux-x86_64.xml  beta-macos-arm64.xml  beta-macos-x86_64.xml  beta-windows-x86_64.xml
assets/themes/: catppuccin-mocha.json  con-dark.json  con-light.json  tokyonight.json
benchmarks/terminal-agent/: README.md  iterate.py  judge_llm.py  log_iteration.py  report.py  run.py  score.py
crates/con/: Cargo.toml  build.rs
crates/con-agent/: Cargo.toml
crates/con-agent/src/: context.rs  control.rs  conversation.rs  hook.rs  lib.rs  playbooks.rs  provider.rs  shell_probe.rs  skills.rs  tmux.rs  tools.rs
crates/con-app/: Cargo.toml  build.rs
crates/con-app/src/: activity_bar.rs  agent_panel.rs  assets.rs  chat_markdown.rs  cli_shim.rs  command_palette.rs  editor_buffer.rs  editor_lsp.rs  editor_syntax.rs  editor_view.rs  file_tree_view.rs  ghostty_view.rs  global_hotkey.rs  hotkey_window.rs  input_bar.rs  keycaps.rs  linux_view.rs  macos_windowing.rs  main.rs  model_registry.rs  motion.rs  pane_tree.rs  quick_terminal.rs  settings_panel.rs  sidebar.rs  sidebar_search_view.rs  stub_view.rs  tab_colors.rs  tab_context_menu.rs  terminal_context_menu.rs  terminal_env.rs  terminal_ime.rs  terminal_keys.rs  terminal_links.rs  terminal_pane.rs  terminal_paste.rs  terminal_restore.rs  terminal_shortcuts.rs  theme.rs  ui_scale.rs  (+3 more)
crates/con-app/src/objc/: ghostty_surface_trampoline.m  global_hotkey_trampoline.m  hotkey_window_trampoline.m  quick_terminal_trampoline.m
crates/con-app/src/workspace/: agent_panel_events.rs  caption.rs  chrome.rs  chrome_actions.rs  control_agent_tools.rs  control_requests.rs  control_surfaces.rs  editor_actions.rs  helpers.rs  input_events.rs  lifecycle.rs  mod.rs  pane_actions.rs  render.rs  session_state.rs  session_worker.rs  sidebar_settings.rs  suggestions.rs  tab_actions.rs  tab_presentation.rs  terminal_factory.rs  tests.rs  types.rs  window_actions.rs
crates/con-app/src/workspace/render/: popups.rs  top_bar.rs
crates/con-cli/: Cargo.toml
crates/con-cli/src/: main.rs
crates/con-core/: Cargo.toml  build.rs
crates/con-core/src/: config.rs  control.rs  harness.rs  lib.rs  release_channel.rs  session.rs  suggestions.rs  tab_summary.rs  workspace_layout.rs
crates/con-ghostty/: Cargo.toml  build.rs
crates/con-ghostty/src/: ffi.rs  lib.rs  stub.rs  terminal.rs  transcript.rs  vt.rs
crates/con-ghostty/src/linux/: backend.rs  mod.rs  pty.rs
crates/con-ghostty/src/windows/: backend.rs  clipboard.rs  conpty.rs  ghostty_vt_stub.c  host_view.rs  mod.rs  profile.rs  render.rs  vt.rs
crates/con-ghostty/src/windows/render/: atlas.rs  font_loader.rs  mod.rs  pipeline.rs  shaders.hlsl
crates/con-paths/: Cargo.toml
crates/con-terminal/: Cargo.toml
crates/con-test/: Cargo.toml  README.md
crates/con-test/src/: main.rs  parser.rs  runner.rs
crates/con-test/testdata/agent/: panel.test
crates/con-test/testdata/panes/: basic.test  exec.test  split.test
crates/con-test/testdata/system/: identify.test  tree.test
crates/con-test/testdata/tabs/: basic.test  rename.test
crates/con/src/: agent_panel.rs  assets.rs  chat_markdown.rs  command_palette.rs  ghostty_view.rs  global_hotkey.rs  input_bar.rs  keycaps.rs  main.rs  model_registry.rs  motion.rs  pane_tree.rs  settings_panel.rs  sidebar.rs  terminal_pane.rs  terminal_view.rs  theme.rs  updater.rs  workspace.rs
crates/con/src/objc/: sparkle_trampoline.m
docs/: README.md  agent.md  con-cli.md  install.md  manifest.json  quick-controls.md  quick-terminal.md  restorable-workspaces-guide.md  screenshots.md  settings.md  skills-and-workflows.md  terminal-workflows.md  workspace-layout-profiles-guide.md
docs/design/: con-design-language.md  con-prototype-addendum.md  con-ui-visual-spec.md  con-ux-product-spec.md
docs/impl/: agent-harness.md  agent-runtime-control-plane.md  agent-tool-surface.md  build-system.md  code-editor-design.md  con-cli-e2e.md  con-test.md  hotkey-window.md  keybindings.md  left-sidebar.md  linux-port.md  macos-focus-and-first-responder.md  (+20 more)
postmortem/: 2026-03-12-gpui-api-patterns.md  2026-03-12-rig-integration-overhaul.md  2026-03-15-approval-channel-redesign.md  2026-04-01-split-pane-layout.md  2026-04-03-pane-tool-deadlock.md  2026-04-04-skills-scan-scope.md  2026-04-04-svg-icon-invisible.md  2026-04-05-agent-control-plane-gap.md  2026-04-05-ghostty-only-runtime.md  2026-04-05-ghostty-theme-sync-regression.md  2026-04-05-pane-context-freshness.md  2026-04-05-pane-remote-host-fallback.md  2026-04-05-pane-runtime-observability.md  2026-04-05-pane-runtime-observer-phase1.md  2026-04-05-terminal-exec-shell-guard.md  2026-04-06-create-pane-command-dropped.md  2026-04-06-ghostty-mouse-offset.md  2026-04-06-process-exit-closes-wrong-pane.md  2026-04-06-scrollbar-desync.md  2026-04-06-tool-output-double-encoding.md  2026-04-06-wait-for-quiescence.md  2026-04-09-current-vs-historical-pane-state.md  2026-04-09-pane-runtime-heuristics-removal.md  2026-04-09-pane-runtime-tracker.md  2026-04-10-control-pane-pane-bootstrap.md  2026-04-10-conversation-trace-persistence.md  2026-04-10-observed-workspace-state-vs-reusable-control.md  2026-04-10-pane-index-vs-pane-id.md  2026-04-10-read-only-fact-preflight.md  2026-04-10-ssh-workspace-continuity.md  2026-04-10-unicode-preview-and-empty-tab-shutdown.md  2026-04-11-agent-cli-turn-gap.md  2026-04-11-control-agent-timeout-generation.md  2026-04-11-control-pane-fallback-frame.md  2026-04-11-control-pane-visibility-gate.md  2026-04-11-disconnected-ssh-recovery-gap.md  2026-04-11-hide-ghostty-host-not-surface.md  2026-04-11-initial-pane-frame-used-stale-superview-size.md  2026-04-11-local-coding-workspace-misrouting.md  2026-04-11-macos-benchmark-bootstrap-boundary.md  (+99 more)
scripts/: install.ps1  install.sh
(+93 files in other folders)
