[package]
name = "con-agent"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
con-paths.workspace = true
rig.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
tokio.workspace = true
futures.workspace = true
http.workspace = true
crossbeam-channel.workspace = true
uuid.workspace = true
chrono.workspace = true
dirs.workspace = true
gethostname.workspace = true
