[package]
name = "con-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "con-cli"
path = "src/main.rs"

[dependencies]
con-agent.workspace = true
con-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
clap = { version = "4.5", features = ["derive"] }
