[package]
name = "con-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
con-terminal.workspace = true
con-agent.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
log.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
dirs.workspace = true
uuid.workspace = true
futures.workspace = true
tokio.workspace = true
