[package]
name = "con-ghostty"
edition.workspace = true
license.workspace = true
version.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
log.workspace = true
parking_lot.workspace = true

[build-dependencies]

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
