[package]
name = "con"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "con"
path = "src/main.rs"

[dependencies]
con-core.workspace = true
con-terminal.workspace = true
con-agent.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
crossbeam-channel.workspace = true
vte.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
uuid.workspace = true
toml.workspace = true
rust-embed.workspace = true
dirs.workspace = true
chrono.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
con-ghostty.workspace = true
cocoa = "=0.26.0"
objc = "0.2"
raw-window-handle = "0.6"

[package.metadata.bundle]
icon = ["resources/app-icon@2x.png", "resources/app-icon.png"]
identifier = "dev.conductor.con"
name = "con"
osx_minimum_system_version = "10.15.7"
